--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,10 +55,9 @@
     <button id="send-btn">Send</button>
   </div>
 
+  <script src="config.js"></script>
   <script>
-    const API_URL = "http://localhost:8000/chat"; 
-    // Change this to your API Gateway URL in production
-    // Example: https://xxxxxx.execute-api.ap-southeast-1.amazonaws.com/chat
+    const API_URL = window.APP_CONFIG.apiUrl;
 
     const chatBox = document.getElementById("chat-box");
     const msgInput = document.getElementById("message");
